@@ -1,3 +1,7 @@
+2001-07-26  Bradford Hovinen  <hovinen@ximian.com>
+
+	* Makefile.am (bonobo_sources): Remove bonobo-property-editor-range.[ch]
+
 2001-07-25  Chema Celorio  <chema@celorio.com>
 
 	* Makefile.am: remove the OAF_FILE_IN_RULE and copy it here
